chore: add custom font to project

--- a/GymApp/Info.plist
+++ b/GymApp/Info.plist
@@ -45,6 +45,19 @@
 	<array>
 		<string>armv7</string>
 	</array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Open Sans.ttf</string>
+        <string>Open Sans Semibold.ttf</string>
+        <string>Open Sans Semibold Italic.ttf</string>
+        <string>Open Sans Light.ttf</string>
+        <string>Open Sans Light Italic.ttf</string>
+        <string>Open Sans Italic.ttf</string>
+        <string>Open Sans Extrabold.ttf</string>
+        <string>Open Sans Extrabold Italic.ttf</string>
+        <string>Open Sans Bold.ttf</string>
+        <string>Open Sans Bold Italic.ttf</string>
+    </array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
