feat(location permission): ask for user location permission on tapping the button

--- a/GymApp/Info.plist
+++ b/GymApp/Info.plist
@@ -69,5 +69,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Gym.app requires access to your phone&apos;s location to show amazing activities near you</string>
 </dict>
 </plist>
